--- a/user-profile-view/src/main/res/values/strings.xml
+++ b/user-profile-view/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">user-profile-view</string>
+    <string name="user_profile_title">user-profile-view</string>
 </resources>
